spacing issue

--- a/src/css/view/woo-product-list.scss
+++ b/src/css/view/woo-product-list.scss
@@ -457,6 +457,7 @@ $spacer-lg: $spacing5;
 
     .eael-product-list-review-count {
         font-size: 15px;
+        margin-left: 5px;
     }
 
     .eael-product-list-notice p {
@@ -580,6 +581,10 @@ $spacer-lg: $spacing5;
                 padding: 12px 16px;
                 margin: 0 15px 0 0;
                 transition: all 0.4s;
+
+                &.added_to_cart {
+                    margin-top: 10px;
+                }
             }
 
             .eael-product-list-quick-view-button a {
@@ -591,5 +596,10 @@ $spacer-lg: $spacing5;
                 cursor: pointer;
             }
         }
+    }
+
+    // Load more
+    .eael-load-more-button-wrap button {
+        margin-top: 20px;
     }
 }
